--- a/Trello_quora/pom.xml
+++ b/Trello_quora/pom.xml
@@ -23,6 +23,13 @@
             <version>2.9.6</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
